# ironclaw-go

./: .dockerignore  .env.example  .env.local.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/ironclaw/: main.go
docker/: Dockerfile  Dockerfile.sidecar
docs/: DESIGN.md  README.md  TECH_STACK.md
internal/agent/: agent.go  agent_test.go  deps.go  router.go  router_test.go  session.go  session_test.go
internal/app/: builder.go
internal/auth/: auth.go  auth_test.go
internal/channels/: channel.go  manager.go  manager_test.go
internal/config/: config.go  config_test.go
internal/db/: db.go  db_test.go  memory.go  postgres.go  postgres_test.go
internal/document/: extract.go  extract_test.go  middleware.go
internal/errors/: errors.go
internal/extensions/: error.go  extensions.go  extensions_test.go  registry.go  types.go
internal/gate/: approval.go  gate.go  gate_test.go  risk.go  risk_test.go  store.go  store_test.go
internal/history/: analytics.go  history.go  history_test.go  store.go
internal/hooks/: hooks.go  hooks_test.go
internal/llm/: anthropic.go  gemini.go  gemini_test.go  llm.go  ollama.go  openai.go
internal/observability/: observability.go  observability_test.go
internal/orchestrator/: job_manager.go  orchestrator.go  orchestrator_test.go  reaper.go  token_store.go
internal/ownership/: cache.go  ownership.go  ownership_test.go
proto/: wasm_runtime.proto
wasm-runtime/: Cargo.toml  build.rs
wasm-runtime/src/: main.rs  runtime.rs
(+74 files in other folders)
