[package]
name = "ironclaw-wasm-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
wasmtime = { version = "31", features = ["component-model"] }
wasmtime-wasi = "31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
